--- a/src/app/pages/home/components/tarjeta.component.html
+++ b/src/app/pages/home/components/tarjeta.component.html
@@ -1,1 +1,12 @@
-<p>tarjeta works!</p>
+
+
+<ng-container *ngFor="let character of characters">
+    <mat-card class="width-max">
+        <mat-card-header>
+          <div mat-card-avatar ></div>
+          <mat-card-title>{{character.name}}</mat-card-title>
+          <mat-card-subtitle>{{character.species}}</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image [src]="character.image" >
+    </mat-card>
+</ng-container>
