--- a/src/app/pages/home/components/tarjeta/tarjeta.component.html
+++ b/src/app/pages/home/components/tarjeta/tarjeta.component.html
@@ -1,12 +1,20 @@
 
 
+
+
 <ng-container *ngFor="let character of characters">
-    <mat-card class="width-max">
+    <div class="design-card" >
+      <mat-card class="width-max">
         <mat-card-header>
           <div mat-card-avatar ></div>
           <mat-card-title>{{character.name}}</mat-card-title>
           <mat-card-subtitle>{{character.species}}</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image [src]="character.image" >
-    </mat-card>
+      </mat-card>
+    </div>
 </ng-container>
+
+
+
+
