--- a/src/app/pages/home/components/tarjeta/tarjeta.component.scss
+++ b/src/app/pages/home/components/tarjeta/tarjeta.component.scss
@@ -8,3 +8,11 @@
     display: inline-block;
     margin: 2rem;
 }
+
+.card-title{
+    color:var(--color-title-primary);
+}
+
+.card-subtitle{
+    color:var(--color-subtitle-primary);
+}
