--- a/src/app/pages/home/components/tarjeta/tarjeta.component.html
+++ b/src/app/pages/home/components/tarjeta/tarjeta.component.html
@@ -3,12 +3,12 @@
 
 
 <ng-container *ngFor="let character of characters">
-    <div class="design-card" >
-      <mat-card class="width-max">
+    <div class="design-card " >
+      <mat-card class="width-max ">
         <mat-card-header>
           <div mat-card-avatar ></div>
-          <mat-card-title>{{character.name}}</mat-card-title>
-          <mat-card-subtitle>{{character.species}}</mat-card-subtitle>
+          <mat-card-title class="card-title">{{character.name}}</mat-card-title>
+          <mat-card-subtitle class="card-subtitle">{{character.species}}</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image [src]="character.image" >
       </mat-card>
