--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root{
-    --bg-body: rgb(0,0,0);
-    --color-title: rgb(109, 109, 109);
-    --color-subtitle: rgb(172, 172, 172);
+    --bg-body-primary: rgb(0,0,0);
+    --color-title-primary: rgb(109, 109, 109);
+    --color-subtitle-primary: rgb(172, 172, 172);
 }
 
 html, body { height: 100%; }
 body { 
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
-    
+    background-color: var(--bg-body-primary);
+}
+
+.centrar{
+    display: flex;
+    justify-content: center;
 }
