--- a/src/app/pages/home/components/buscador/buscador.component.html
+++ b/src/app/pages/home/components/buscador/buscador.component.html
@@ -1,1 +1,8 @@
-<p>buscador works!</p>
+
+
+<input type="text" class="centrar design-input"
+    placeholder="Buscar..."
+    name="buscador" id="buscador">
+
+
+
