--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
     <app-buscador></app-buscador>
 </div>
 
-<app-tarjeta [characters]="character" ></app-tarjeta>
+<app-tarjeta [characters]="characterAux" ></app-tarjeta>
 
 
 <div class="centrar">
