--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,7 +15,7 @@
 <div class="centrar">
     <mat-paginator [length]="info.count"
         (page)="handlePageEvent($event)"
-        [pageSize]="20" >
+        [pageSize]="characterAux.length" >
     </mat-paginator>
 </div>
 <br>
